# Fast-Drone-XI35

./: README.md
Docker/: container_init.sh
Docker/Dockerfile/: Dockerfile.jetson_base
config_scipt/: global_config_indoor.yaml  global_config_outdoor.yaml  read_global_config.py  set_global_config.py
shfiles/: 2csi_rs_imu.sh  record.sh  record_csi_rs_imu.sh
src/auto_search/search_plan/include/search_plan/: search_plan_fsm.h
src/auto_search/search_plan/launch/: search_plan.launch
src/auto_search/search_plan/src/: search_plan_fsm.cpp
src/auto_search/target_merge/include/target_merge/: target_merge.h
src/auto_search/target_merge/launch/: target_merge.launch
src/auto_search/target_merge/src/: target_merge.cpp  target_merge_node.cpp
src/planner/plan_env/src/: grid_map.cpp
src/planner/plan_manage/include/plan_manage/: ego_replan_fsm.h
src/planner/plan_manage/launch/: advanced_param_exp.xml  single_run_in_exp.launch
src/planner/plan_manage/src/: ego_replan_fsm.cpp
src/realflight_modules/VINS-Fusion-gpu/config/: fast_drone_250.yaml  vins_rviz_config.rviz
src/realflight_modules/VINS-Fusion-gpu/superpoint/: CMakeLists.txt  package.xml
src/realflight_modules/VINS-Fusion-gpu/superpoint/include/: feature_detector.h  feature_tracker.h  point_matcher.h  read_config.h  read_configs.h  super_point.h  utils.h
src/realflight_modules/VINS-Fusion-gpu/superpoint/launch/: superpoint_frontend.launch
src/realflight_modules/VINS-Fusion-gpu/superpoint/model/: superpoint_v1_sim_int32.engine
src/realflight_modules/VINS-Fusion-gpu/superpoint/scripts/: feature_match.py  feature_match_node.py  sp_model.engine  sp_model.onnx  sp_model_fp32.engine
src/realflight_modules/VINS-Fusion-gpu/superpoint/scripts/utils/: change_layernorm.py  engine_inspect.py  feature_process.py  feature_process_trt.py  lightglue_onnx2trt.sh  onnx2tensorrt.sh  onnx_inspect.py  parameter.py  pt2onnx.py  sp_model.engine  sp_model.onnx  sp_tensorrt.py
src/realflight_modules/VINS-Fusion-gpu/superpoint/src/: feature_detector.cpp  feature_tracker.cpp  feature_tracker_node.cpp  light_glue.cpp  point_matcher.cpp  super_point.cpp
src/realflight_modules/VINS-Fusion-gpu/superpoint/trt_plugins/: custom_layernorm.cu
src/realflight_modules/VINS-Fusion-gpu/vins_estimator/: CMakeLists.txt
src/realflight_modules/VINS-Fusion-gpu/vins_estimator/launch/: fast_drone_250.launch
src/realflight_modules/VINS-Fusion-gpu/vins_estimator/src/: KITTIGPSTest.cpp  KITTIOdomTest.cpp  rosNodeTest.cpp
src/realflight_modules/VINS-Fusion-gpu/vins_estimator/src/estimator/: estimator.cpp  estimator.h  feature_manager.cpp  feature_manager.h  parameters.cpp  (+1 more)
src/realflight_modules/det-reg-pnp/cv_bridge_3416/src/: CMakeLists.txt
src/realflight_modules/det-reg-pnp/detect_box_pnp/src/: detect_box_pnp_node.cpp
src/realflight_modules/det-reg-pnp/target_recognition/launch/: target_recognition.launch
src/realflight_modules/det-reg-pnp/target_recognition/src/: target_recognition_node.py
src/realflight_modules/px4ctrl/config/: ctrl_param_fpv.yaml
src/realflight_modules/px4ctrl/src/: PX4CtrlFSM.cpp  PX4CtrlFSM.h  PX4CtrlParam.cpp  PX4CtrlParam.h  controller.cpp  px4ctrl_node.cpp
src/utils/thread_pool/: CMakeLists.txt  package.xml
src/utils/thread_pool/include/thread_pool/: SafeQueue.h  ThreadPool.h
src/utils/thread_pool/src/: thread_pool.cpp
terminator/: config  config-orin01-nodocker
(+6 files in other folders)
